# FairSharer

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml
docs/: index.md  installation.md  usage.md
src/fairsharer/: __init__.py  fairsharer.py
tests/: __init__.py  test_fairsharer.py
